# tn_add_scripture_links

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  add_scripture_links.py  requirements.txt  setup.cfg  setup.py  test_script.py
examples/: README.md  tn_GEN_sample.tsv
test_cases/: README.md  tn_JUD.tsv  tn_JUD_converted.tsv  tn_JUD_diff.tsv  tn_MAT.tsv  tn_MAT_converted.tsv  tn_MAT_diff.tsv  tn_PSA.tsv  tn_PSA_diff.tsv  tn_PSA_expected.tsv
