[metadata]
name = tn-scripture-links
version = 1.0.0
author = Translation Notes Team
description = A tool to automatically add scripture links to translationNotes TSV files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Text Processing
    Topic :: Religion

[options]
python_requires = >=3.6
py_modules = add_scripture_links

[options.entry_points]
console_scripts =
    add-scripture-links = add_scripture_links:main
